--- a/client/src/Header.css
+++ b/client/src/Header.css
@@ -7,24 +7,24 @@
 }
 .header-1 {
     text-align: center;
-    font-size: 3.5vw;
+    font-size: 3vw;
     padding-top: 0.5vw;
     color: rgb(255, 255, 255);
 }
 .header-2 {
-    font-size: 2.25vw;
+    font-size: 2vw;
     text-align: center;
-    padding-top: 0px;
+    padding-top: 0.5vw;
     color: rgb(255, 255, 255)
 }
 .logo {
-    height: 100%;
-    width: 100%;
+    height: 90%;
+    width: 90%;
     object-fit: contain;
 }
 .logo2 {
-    height: 95%;
-    width: 95%;
+    height: 90%;
+    width: 90%;
     object-fit: contain;
     padding-left: 20%;
 }
